--- a/src/stv-signup.html
+++ b/src/stv-signup.html
@@ -5,14 +5,11 @@
             position: absolute;
             box-sizing: border-box;
             padding: 30px 100px;
-
             left: 0;
             right: 0;
             margin: 0px auto 0px auto;
-
             width: 500px;
             box-shadow: 0px 0px 12px 6px rgba(0, 0, 0, 0.30);
-
             background-color: var(--light-primary-color);
             color: var(--primary-text-color);
         }
@@ -41,8 +38,6 @@
             </div>
         </div>
         <form id="form" on-keypress="handleFormKey">
-            <label class="stv">User name</label>
-            <input class="stv" type="text" value="{{user::input}}" required pattern="[a-zA-Z0-9]+">
             <label class="stv">E-mail</label>
             <input class="stv" type="email" value="{{email::input}}" required>
             <br>
@@ -50,10 +45,6 @@
             <input class="stv" type="password" value="{{password::input}}" required>
             <label class="stv">Confirm your password</label>
             <input class="stv" type="password" value="{{passwordCheck::input}}" required>
-
-            <!--<br>-->
-            <!--<label class="stv">Organization</label>-->
-            <!--<input class="stv" type="text" value="{{organization}}">-->
 
             <br>
             <br>
@@ -69,10 +60,6 @@
     Polymer({
         is: "stv-signup",
         properties: {
-            user: {
-                type: String,
-                value: ''
-            },
             email: {
                 type: String,
                 value: ''
@@ -90,43 +77,51 @@
                 value: ''
             }
         },
-        handleFormKey: function (e) {
+        handleFormKey: function(e) {
             if (e.which == 13) {
                 this.handleForm();
             }
         },
-        handleForm: function (e) {
+        handleForm: function(e) {
             this.message = '';
-
+            this.email = (this.email === "demo") ? "demo@demo.com" : this.email;
             if (this.$.form.checkValidity()) {
                 if (this.password === this.passwordCheck) {
                     this._signup();
-                }
-                else {
+                } else {
                     alert("Sorry, your password does not match");
                 }
-            }
-            else {
-                alert("Please, you should fill all the fields. If error persist, contact crew at " + CONTACT_MAIL + ".");
+            } else {
+                // alert("Please, you should fill all the fields. If error persist, contact crew at " + CONTACT_MAIL + ".");
+                alert("Please, you should fill all the fields.");
             }
         },
-        _signup: function () {
+        clean:function(){
+            this.email = "";
+            this.password = "";
+            this.passwordCheck = "";
+        },
+        _signup: function() {
             var me = this;
-            OpencgaManager.users.create({
+            SteviaManager.users.create({
                 query: {
-                    userId: this.user,
-                    name: this.user,
                     email: this.email,
-                    organization: '',
                     password: CryptoJS.SHA1(this.password).toString()
                 },
                 request: {
                     async: false,
-                    success: function (response) {
+                    success: function(response) {
                         if (response.response[0].errorMsg === '' || response.response[0].errorMsg == null) {
-                            var userId = response.response[0].result[0].id;
-                            me.message = userId + ' created';
-                            me.login()
+                            var email = response.response[0].results[0].email;
+                            me.message = email + ' created';
+                            Cookies.set('bioinfo_sid', response.response[0].results[0].sessions[0].id);
+                            Cookies.set('bioinfo_user', email);
+
+                            me.clean();
+
+                            me.fire('login', {
+                                status: true
+                            });
                         } else {
                             me.message = response.response[0].errorMsg;
                             //Delete cookies
@@ -134,176 +129,8 @@
                             Cookies.expire('bioinfo_user');
                         }
                     },
-                    error: function () {
+                    error: function() {
                         me.message = 'Server error, try again later.';
-                    }
-                }
-            });
-        },
-        login: function (e) {
-            var me = this;
-            this.message = '';
-
-            OpencgaManager.users.login({
-                id: this.user,
-                query: {
-                    password: CryptoJS.SHA1(this.password).toString()
-                },
-                request: {
-                    async: false,
-                    success: function (response) {
-                        console.log(response);
-                        if (response.response[0].errorMsg === '' || response.response[0].errorMsg == null) {
-                            me.sid = response.response[0].result[0].sessionId;
-                            Cookies.set('bioinfo_sid', response.response[0].result[0].sessionId);
-                            Cookies.set('bioinfo_user', response.response[0].result[0].userId);
-                            me.createProject(me.userId, me.sid);
-                            me.createMetaProject(me.userId, me.sid);
-                        } else {
-                            me.message = response.response[0].errorMsg;
-                            //Delete all cookies
-                            Cookies.expire('bioinfo_sid');
-                            Cookies.expire('bioinfo_user');
-                        }
-                    },
-                    error: function () {
-                        me.message = 'Server error, try again later.';
-                    }
-                }
-            });
-        },
-        createProject: function (userId, sid) {
-            var me = this;
-            this.message = '';
-
-            OpencgaManager.projects.create({
-                query: {
-                    userId: me.user,
-                    sid: me.sid,
-                    name: "Default project",
-                    alias: "defaultPr",
-                    description: "default project",
-                    organization: this.organization
-                },
-                request: {
-                    async: false,
-                    success: function (response) {
-                        if (response.response[0].errorMsg === '' || response.response[0].errorMsg == null) {
-//                            me.message = 'Project created sucessfully.';
-                            me.projectId = response.response[0].result[0].id;
-                            me.createStudy()
-
-                        } else {
-                            me.message = response.response[0].errorMsg;
-                        }
-                    },
-                    error: function () {
-                        alert('Server error, try again later.');
-                    }
-                }
-            });
-        },
-        createMetaProject: function (userId, sid) {
-            var me = this;
-            this.message = '';
-
-            OpencgaManager.projects.create({
-                query: {
-                    userId: me.user,
-                    sid: me.sid,
-                    name: ".meta",
-                    alias: "meta",
-                    description: "meta",
-                    organization: this.organization
-                },
-                request: {
-                    async: false,
-                    success: function (response) {
-                        if (response.response[0].errorMsg === '' || response.response[0].errorMsg == null) {
-//                            me.message = 'Project created sucessfully.';
-                            var projectId = response.response[0].result[0].id;
-                            me.createMetaStudy(projectId)
-
-                        } else {
-                            me.message = response.response[0].errorMsg;
-                        }
-                    },
-                    error: function () {
-                        alert('Server error, try again later.');
-                    }
-                }
-            });
-
-        },
-        createMetaStudy: function (projectId) {
-            var me = this;
-            this.message = '';
-
-            OpencgaManager.studies.create({
-                query: {
-                    sid: me.sid,
-                    name: ".meta",
-                    alias: "meta",
-                    description: "meta",
-                    organization: this.organization,
-                    type: "FAMILY",
-                    projectId: projectId
-
-                },
-                request: {
-                    async: false,
-                    success: function (response) {
-                        if (response.response[0].errorMsg === '' || response.response[0].errorMsg == null) {
-
-                            me.user = "";
-                            me.name = "";
-                            me.email = "";
-                            me.organization = "";
-                            me.password = "";
-                            me.check = "";
-
-                        } else {
-                            me.message = response.response[0].errorMsg;
-                        }
-                    },
-                    error: function () {
-                        alert('Server error, try again later.');
-                    }
-                }
-            });
-        },
-        createStudy: function (e) {
-            var me = this;
-            this.message = '';
-//                var studyName = "WorkSpace";
-
-            OpencgaManager.studies.create({
-                query: {
-                    sid: me.sid,
-                    name: "Default study",
-                    alias: "defaultSt",
-                    description: "default study",
-                    organization: this.organization,
-                    type: "FAMILY",
-                    projectId: me.projectId
-
-                },
-                request: {
-                    async: false,
-                    success: function (response) {
-                        if (response.response[0].errorMsg === '' || response.response[0].errorMsg == null) {
-//                            me.message = 'Study created sucessfully.';
-                            me.studyId = response.response[0].result[0].id;
-
-                            me.fire('login', {status: true});
-//                            me.createAnalysis();
-
-                        } else {
-                            me.message = response.response[0].errorMsg;
-                        }
-                    },
-                    error: function () {
-                        alert('Server error, try again later.');
                     }
                 }
             });
