--- a/src/stv-profile.html
+++ b/src/stv-profile.html
@@ -57,13 +57,13 @@
             <div class="stv-btn stv-btn-shdw" on-click="handleChangePasswordForm">Change password</div>
         </form>
 
-        <form id="formEmail">
+        <!-- <form id="formEmail">
             <label class="stv">New e-mail</label>
             <input class="stv" type="email" value="{{email::input}}" required>
             <br>
 
             <div class="stv-btn stv-btn-shdw" on-click="handleChangeEmailForm">Change e-mail</div>
-        </form>
+        </form> -->
 
         <div class="message">{{message}}</div>
     </template>
