--- a/src/stv-header.html
+++ b/src/stv-header.html
@@ -467,12 +467,12 @@
                     },
                     request: {
                         success: function(response) {
-                            if ((response.response[0].errorMsg === '' || response.response[0].errorMsg == null) && response.response[0].results.length > 0) {
+                            if(response.response[0].error == null && response.response[0].results.length > 0){
                                 me.userData = response.response[0].results[0];
                                 me.userText = me._checkUserName(me.userData);
                                 console.log("userData has been modified since last call");
                             }
-                            if (response.response[0].errorMsg != null && response.response[0].errorMsg.indexOf('Invalid sessionId for user') !== -1) {
+                            if (response.response[0].error != null) {
                                 me.sessionFinished()
                             }
                         },
